clean up and added dockerfile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,12 @@ set(INCLUDE_FILES
         include/scrutiny/assert/str.h
         include/scrutiny/assert/numeric.h
         include/scrutiny/assert/vector.h
-        include/scrutiny/assert/optional.h include/scrutiny/runner/test_name_factory.h include/scrutiny/runner/test_reporter_message.h include/scrutiny/runner/test_state.h include/scrutiny/runner/test_state_message.h include/scrutiny/assert/pointer.h)
+        include/scrutiny/assert/optional.h
+        include/scrutiny/runner/test_name_factory.h
+        include/scrutiny/runner/test_reporter_message.h
+        include/scrutiny/runner/test_state.h
+        include/scrutiny/runner/test_state_message.h
+        include/scrutiny/assert/pointer.h)
 
 set(SOURCE_FILES
         src/runner/test.cpp
@@ -37,7 +42,11 @@ set(SOURCE_FILES
         src/runner/test_factory.cpp
         src/assert/bool.cpp
         src/assert/numeric.cpp
-        src/assert/str.cpp src/runner/test_name_factory.cpp src/runner/test_reporter_message.cpp src/runner/test_state_message.cpp src/runner/test_state.cpp src/assert/pointer.cpp)
+        src/assert/str.cpp
+        src/runner/test_name_factory.cpp
+        src/runner/test_reporter_message.cpp
+        src/runner/test_state_message.cpp
+        src/runner/test_state.cpp src/assert/pointer.cpp)
 
 set(TEST_FILES
         test/scrutiny/assert/assert_failure_test.cpp
@@ -67,7 +76,9 @@ set(TEST_FILES
         test/scrutiny/assert/str_test.cpp
         test/scrutiny/assert/str_test.h
         test/scrutiny/assert/vector_test.cpp
-        test/scrutiny/assert/vector_test.h test/scrutiny/runner/test_name_factory_test.cpp test/scrutiny/runner/test_name_factory_test.h)
+        test/scrutiny/assert/vector_test.h
+        test/scrutiny/runner/test_name_factory_test.cpp
+        test/scrutiny/runner/test_name_factory_test.h)
 
 set(STATIC_DEPENDENCIES)
 
@@ -97,3 +108,8 @@ target_link_libraries(scrutiny
 target_link_libraries(scrutiny_tests
         scrutiny
         ${STATIC_DEPENDENCIES})
+
+enable_testing()
+
+add_test(NAME UnitTests
+        COMMAND scrutiny_tests)
